--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body {
-    background-color: rgb(101, 101, 200);
+  /* min-height: 100vh; */
+  background-color: #99D6EA;
+  font-family: 'Poppins',sans-serif;
 }
 
 
@@ -10,6 +12,7 @@ nav {
   
   ul {
     list-style-type: none;
+    width: 97%;
     margin: 0;
     padding: 0;
     display: flex;;
@@ -20,6 +23,11 @@ nav {
   li {
     float: left;
   }
+
+  .logo {
+    font-size: 48px;
+    padding: 10px 55px;
+  }
   
   li a {
     display: block;
@@ -28,18 +36,19 @@ nav {
     padding: 14px 16px;
     text-decoration: none;
     font-weight: bold;
+    font-size: 24px;
   }
 
   .button-1 {
-    background-color: rgb(101, 101, 200);
-    border: 2px solid white;
-    border-radius: 10px;
+    background-color: transparent;
+    border: 7px solid #FDD85D;
+    border-radius: 200px;
     color: black;
-    padding: 10px 20px;
+    padding: 10px 30px;
     text-align: center;
     font-weight: bold;
     display: inline-block;
-    font-size: 16px;
+    font-size: 24px;
     margin: 0;
     cursor: pointer;
   }
@@ -47,7 +56,7 @@ nav {
   hr {
     border: none;
     border-top: 5px solid white;
-    margin: 20px 0;
+    margin: 50px;
   }
 
   .container {
@@ -61,21 +70,40 @@ nav {
   
   .text-container {
     width: 50%;
-    padding: 150px;
-    box-sizing: border-box;
-    height: 25vh;
-    
-  }
-  
-  h1 {
-    font-size: 30px;
-    /* margin-bottom: 20px; */
-    color: white;
+    /* padding: 10px; */
+    /* box-sizing: border-box; */
+    /* height: 25vh; */
+    flex-direction: column;
     display: flex;
     justify-content: center;
     align-items: center;
+    
   }
   
+  p{
+    font-weight: bold;
+    font-size: 60px;
+    color: white;
+    margin-top: -75px;
+  }
+
+  
   .button-2 {
-    color: red;
+      color: black;
+      background-color: #FDD85D;
+      font-weight: bold;
+      font-size: 27px;
+      border: none;
+      border-radius: 35px;
+      margin-bottom: 20px;
+      padding: 18px 35px;
+  }
+
+  img {
+    width: 435px;
+    height: 403px;
+    border-radius: 100%;
+    border: 25px solid #FDD85D;
+    margin-top: -25px;
+    margin-left: 100px;
   }
