--- a/Landing Page/styles.css
+++ b/Landing Page/styles.css
@@ -90,7 +90,7 @@ nav {
   
   .button-2 {
       color: black;
-      background-color: #FDD85D;
+      background-color: red;
       font-weight: bold;
       font-size: 27px;
       border: none;
